change getLast into historyPanels.size() - 1